--- a/src/components/Trail/style.css
+++ b/src/components/Trail/style.css
@@ -11,7 +11,7 @@
   }
   
   .box {
-      background-color: #282c34;
+      background-color: #262626;
       width:400px;
       height:175px;
       position: absolute;
