--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -2,21 +2,19 @@
     height: 200px;
     object-fit: cover;
     width: 350px;
-    margin-bottom: 20px
+    margin-bottom: 20px;
+    transition: all .3s;
+    transition-timing-function: ease-in;
 }
 
 .project-card:hover{
     width: 400px;
     height: 250px;
-    transition: width 1s, height 1s;
-    transition-timing-function: ease-in;
+    transition: all .3s;
+    transition-timing-function: ease-out;
+
 }
 
-.project-card:hover:after{
-    height: 200px;
-    width: 350px;
- 
-}
 
 .project-title{
     color: white;
