--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -1,18 +1,31 @@
-.project-card{
+.project-card {
+
+    transition: 0.3s;
     height: 200px;
     z-index: 0;
     object-fit: cover;
     width: 350px;
-    transition: all .3s;
     transition-timing-function: ease-in;
-    margin-bottom: 10px;
-}
 
-.project-card:hover {
+    filter: none;
+    -webkit-filter: grayscale(0%);
+  }
+
+.project-card:hover, .project-card:active {
     transition: all .3s;
     transition-timing-function: ease-out;
     z-index: 0;
-    opacity: .3;
+    opacity: .6;
+    filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+    /* Firefox 3.5+ */
+    filter: gray;
+    /* IE6-9 */
+    -webkit-filter: grayscale(100%);
+    /* Chrome 19+ & Safari 6+ */
+    -o-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -webkit-transition: 0.3s;
 }
 
 /* .project .project-card-gif{
@@ -38,14 +51,15 @@
 
 .learn {
     position: relative;
-    bottom: 100px;
-    z-index: 3;
-
-
+    bottom: 202px;
+    opacity: 0;
+    width: 100%;
+    height: 200px;
+    margin-bottom:0px;
 }
 
-.project-card:hover + .learn{
-    z-index: 3;
-    color: red;
-    display: inline-block;
-}
+
+
+.learn:hover {
+    opacity: .5;
+  }
